# backend

./: .replit  data.json  dutchx.py  ipfs.py  main.py  pyproject.toml  replit.nix
templates/: index.html
